FIX: footer not showing properly

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10,7 +10,7 @@ header {
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 15px;
+  padding: 10px;
   background-color: #eee;
   -webkit-box-shadow: 0 16px 4px -4px gray;
   -moz-box-shadow: 0 6px 4px -4px gray;
